<?xml version="1.0"?>
<package format="2">
  <name>rviz_obstacle_generator</name>
  <version>0.0.1</version>
  <description>The rviz obstacle generator package</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>hmcl_msgs</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  
  
  
  
  
  
  

  <exec_depend>roscpp</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>hmcl_msgs</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>  
  
  
  
  
  
  
  <export>
    <build_type>catkin</build_type>
  </export>
</package>
